# SQL-Mate

./: .gitignore  CLAUDE.md  PHASE_1_KICKOFF.md  README.md  SETUP.md  START_HERE.md  dev.ps1  index.html  package.json  pnpm-lock.yaml  update.bat  update.ps1  vite.config.ts  widget.html
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  BUGS.md  GLOSSARY.md  PHASE_10_KICKOFF.md  PHASE_1_LOG.md  PHASE_2_LOG.md  PHASE_3_LOG.md  PHASE_4_LOG.md  PHASE_5_LOG.md  PHASE_6_LOG.md  PHASE_9B_DEFERRED.md  PROJECT_BRIEF.md  ROADMAP.md  SECURITY_MODEL.md
docs/architecture/: llm-provider.md  query-execution.md  schema-extraction.md  schema-store.md  sql-generation.md  sql-validation.md  ui-flows.md
docs/decisions/: 0001-tauri-over-electron.md  0002-byo-api-key.md  0003-openai-compat-fallback.md  0004-sqlglot-for-validation.md  0005-reqwest-for-http.md  0006-sqlx-for-postgres.md  0007-sqlcipher-for-local-store.md  0008-no-keychain-in-phase-2.md  0009-python-sidecar-lifecycle.md  0010-llm-provider-abstraction.md  0011-embedding-based-schema-retrieval.md  0012-dialect-rollout-strategy.md  0013-user-facing-model-switching.md  0014-floating-widget-windows.md  0015-multi-database-picker.md  0016-os-keychain-win32-credential-manager.md  0017-session-context-and-followup-suggestions.md  README.md
docs/design/: widget-design-spec.md  widget-prototype.html
sidecar/: main.py  requirements.txt
src/: App.css  App.tsx  Onboarding.tsx  SqlBlock.tsx  Widget.tsx  types.ts  widget-icons.tsx  widget-main.tsx  widget.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial_schema.sql  0002_provider_configs.sql  0003_schema_embeddings.sql  0004_widget_state.sql
src-tauri/resources/: model_registry.json
src-tauri/src/: commands.rs  lib.rs  main.rs  redact.rs  request_log.rs  retrieve.rs  schema.rs  security_pdf.rs
src-tauri/src/extract/: mod.rs  mysql.rs  postgres.rs
src-tauri/src/llm/: anthropic.rs  embeddings.rs  mod.rs  openai.rs
src-tauri/src/sidecar/: mod.rs
src-tauri/src/store/: connection.rs  embeddings.rs  history.rs  mod.rs  profiles.rs  providers.rs  redactions.rs  schemas.rs  widget_state.rs
