[package]
name = "sql-mate"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sql_mate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP client. Pinned, minimal features. See docs/decisions/0005-reqwest-for-http.md.
reqwest = { version = "=0.13.3", default-features = false, features = ["rustls", "json"] }
# Postgres + MySQL drivers. Pinned. See docs/decisions/0006-sqlx-for-postgres.md.
# Phase 6 follow-up (BUGS.md #4): the type features `time` and `uuid` are
# enabled on sqlx-postgres / sqlx-mysql DIRECTLY rather than through the sqlx
# umbrella crate. The umbrella's type features cascade to sqlx-sqlite
# unconditionally in 0.8.6, which would require libsqlite3-sys 0.30.x and
# collide with rusqlite's libsqlite3-sys 0.37.x (ADR 0012 §4).
sqlx = { version = "=0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "mysql"] }
sqlx-postgres = { version = "=0.8.6", default-features = false, features = ["time", "uuid"] }
sqlx-mysql = { version = "=0.8.6", default-features = false, features = ["time"] }
# Local encrypted store. Pinned. See docs/decisions/0007-sqlcipher-for-local-store.md.
rusqlite = { version = "=0.39.0", features = ["bundled-sqlcipher-vendored-openssl"] }
# NOTE: keyring removed in Phase 2 follow-up. set_password silently failed to
# persist on this Windows install (10.0.26200) for both keyring 3.6.3 and 4.0.0.
# Secrets are kept in the SQLCipher-encrypted local store for now; revisit when
# Phase 7 lands and the redaction layer needs a re-evaluation.
uuid = { version = "=1.23.1", features = ["v4", "serde"] }
time = { version = "=0.3.47", features = ["serde", "formatting"] }
# CSPRNG for the SQLCipher key generated on first launch.
getrandom = "=0.3.4"
# Async process + IO + channels for the Python sidecar manager.
# See docs/decisions/0009-python-sidecar-lifecycle.md.
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "rt-multi-thread", "time"] }
# Stream utilities for row-streaming the query execution path.
futures = "0.3"
# PDF generation for the Phase 9 security review pack. Pure Rust, MIT, no
# native deps; uses only the built-in standard fonts so we don't have to
# bundle font files. See `src/security_pdf.rs`.
printpdf = "=0.7.0"

